# malta

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  conf.json  conf.yaml  conf.z
.github/workflows/: rust.yml
ares/: Cargo.toml
ares/src/: crypto.rs  frontend.rs  main.rs
helios/: Cargo.toml  Makefile  TeamID  conf.yaml
helios/src/: checks.rs  crypto.rs  main.rs
src/: checks.rs  crypto.rs  main.rs
