[package]
name = "helios"
version = "0.1.0"
authors = ["Safin Singh <safin.singh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
colored = "2.0.0"
flate2 = "1.0"

[dependencies.users]
git = "https://github.com/ogham/rust-users.git"

