[package]
name = "ares"
version = "0.1.0"
authors = ["Safin Singh <safin.singh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
