[package]
name = "helios"
version = "0.1.0"
authors = ["Safin Singh <safin.singh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.57"
regex = "1"
colored = "2.0.0"
flate2 = "1.0"
clap = "3.0.0-beta.1"
rand = "0.7.3"
reqwest = { version="0.10.8", features = ["blocking", "json"] }

[dependencies.users]
git = "https://github.com/ogham/rust-users.git"

